# DeviousDevicesNG

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml
data/SKSE/Plugins/Devious Devices NG/: devices.json
include/: API.h  Config.h  ConflictMap.h  Device.h  DeviceManager.h  DeviceReader.h  Export.h  Expression.h  Hider.h  Hooks.h  HooksVirtual.h  InventoryFilter.h  LibFunctions.h  NodeHider.h  Papyrus.h  Script.hpp  Serialization.h  Settings.h  Switches.h  UI.h  UpdateHook.h  UpdateManager.h  Utility.h  Utils.h
include/Animation/: Animation.h  Registry.h
patchers/DD Mapping Generator/: .gitignore  README.md  gulpfile.js  module.json  package.json
scripts/: BUILD_ALL.bat  BUILD_ONE.bat  BUILD_ONE_EX.bat  zadBQ00.pex  zadBeltedAnims.pex  zadBoundCombatScript.pex  zadConfig.pex  zadDevicesUnderneathScript.pex  zadEquipScript.pex  zadEventBoots.pex  zadEventHorny.pex  zadEventStruggle.pex  zadGagNoFoodEffect.pex  zadLibs.pex  zadNPCQuestScript.pex  zadNativeFunctions.pex  zadPlayerScript.pex  zadSLBoundAnims.pex  zadcAnims.pex  zadcFurnitureScript.pex  zadclibs.pex  zadexpressionlibs.pex  zadx_BondageMittensEffectScript.pex
scripts/source/: zadBQ00.psc  zadBeltedAnims.psc  zadBoundCombatScript.psc  zadConfig.psc  zadDevicesUnderneathScript.psc  zadEquipScript.psc  zadGagNoFoodEffect.psc  zadLibs.psc  zadNPCQuestScript.psc  zadNativeFunctions.psc  zadPlayerScript.psc  zadcAnims.psc  zadcFurnitureScript.psc  zadclibs.psc
src/: API.cpp  Config.cpp  Device.cpp  DeviceManager.cpp  DeviceReader.cpp  Expression.cpp  Hider.cpp  HooksVirtual.cpp  InventoryFilter.cpp  LibFunctions.cpp  Main.cpp  NodeHider.cpp  PCH.h  Papyrus.cpp  Serialization.cpp  UpdateHook.cpp  UpdateManager.cpp  Utils.cpp
src/Animation/: Registry.cpp
